Updating styling sheet

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/99b3214bd2.js" crossorigin="anonymous"></script>
     <title>Quote Generator</title>
 </head>
 <body>
     <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
-            <i class="fas fa-quate-left"></i>
+            <i class="fa-solid fa-quote-left"></i>
             <span id="quote">Common sense is not so commom.</span>
         </div>
 
@@ -23,7 +24,7 @@
         <!-- Buttons -->
         <div class="button-container">
             <button class="twitter-button" id="twitter" title="Tweet This!">
-                <i class="fab fa-twitter"></i>
+                <i class="fa-brands fa-twitter"></i>
             </button>
             <button id="new-quote">New Quote</button>
         </div>
