--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fa-solid fa-quote-left"></i>
-            <span id="quote">Common sense is not so commom.</span>
+            <span id="quote"></span>
         </div>
 
         <!-- Author -->
         <div class="quote-author">
-            <span class="author">Voltaire</span>
+            <span class= "author" id = "author"></span>
         </div>
 
         <!-- Buttons -->
@@ -29,6 +29,8 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+
+    <div class="loader" id="loader"></div>
 
 <script src="script.js"></script>
 </body>
